--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
+package-lock.json
 # dependencies
+/.idea
 /node_modules
 /.pnp
 .pnp.js
-
 # testing
 /coverage
 
