--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-package-lock.json
+
 # dependencies
-/.idea
+package-lock.json
+.idea
 /node_modules
 /.pnp
 .pnp.js
